--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,3 +160,8 @@ body::-webkit-scrollbar-thumb {
   transform: translateX(150%) !important;
   margin-top: 2vh;
 }
+
+
+.MuiIconButton-root:hover{
+  background-color: transparent !important;
+}
