--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -12,7 +12,7 @@
   cursor: pointer;
   text-decoration: none;
   color: #b7c9cc;
-  padding: 8px 28px;
+  padding: 8px 28px !important;
   font-weight: 600;
   letter-spacing: 0.6px;
   font-size: 13px;
@@ -39,27 +39,34 @@
 
 .navbar__left {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 .navbar__right {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center !important;
 }
-.navbar__middle {
-}
+/* .navbar__middle {
+} */
 .navbar__logo {
   animation: tom 1.6s ease-in-out infinite both;
 }
 
 .navbar__brand {
-  font-size: 23px;
+  font-size: 30px;
   font-weight: 700;
   letter-spacing: 0.5px;
   margin-left: 15px;
   font-family: monospace;
   color: white;
+}
+
+@media (max-width: 890px){
+  .navbar__link{
+    padding: 6px 15px !important;
+    margin-right: 5px !important;
+  }
 }
 
 .logout__button {
@@ -86,17 +93,16 @@
   background-color: #d7d7d7 !important;
 }
 
-@keyframes tom {
+/* @keyframes tom {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 .scrollable_navbar {
-  transition: all 1s linear !important;
   background-color: rgb(0, 0, 0) !important;
   opacity: 0.85;
 }
