--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,7 @@ body {
   /* background-image: url("./Images/bg.png"); */
   /* text-align: center; */
   background-color: #f3f7f7;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -24,14 +25,15 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
+  /* background-color: #39424e; */
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #39424e;
 }
+
 
 body::-webkit-scrollbar-thumb {
   border-radius: 60px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-  background: linear-gradient(to bottom, #049744, #20f87e);
+  /* background: linear-gradient(to bottom, #049744, #20f87e); */
 }
 
 .Toastify__toast-container.Toastify__toast-container--top-left {
@@ -174,4 +176,9 @@ body::-webkit-scrollbar-thumb {
 }
 .utilsa:hover {
   background-color: #afee88;
+}
+
+.utilsa_comment{
+  color:  #059644;
+  font-weight: 600;
 }
