--- a/client/src/css/Explore.css
+++ b/client/src/css/Explore.css
@@ -24,7 +24,6 @@
   text-decoration: none;
 }
 
-
 .Explore_title {
   font-size: 45px;
   font-weight: 600;
@@ -59,6 +58,30 @@
   cursor: pointer !important;
 }
 
+@media (max-width: 870px) {
+  .toolbarRight > * {
+    margin: 0 5px !important;
+  }
+}
+
+@media (max-width: 780px) {
+  .toolbarRight > * {
+    margin: 0 0px !important;
+  }
+  .toolbar_explore {
+    justify-content: space-between;
+  }
+  .illustration_image {
+    width: 650px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .illustration_image {
+    width: 475px;
+  }
+}
+
 .home,
 .aboutus,
 .features,
@@ -69,4 +92,28 @@
 .active {
   border-bottom: 4px solid #05a54b;
   border-radius: 2.5px;
+}
+
+
+.why_content{
+  font-size: 20px;
+  font-weight: 600;
+  font-family: sans-serif;
+  text-align: justify;
+}
+
+.developer_image{
+  border-radius: 50% !important;
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+}
+
+.developer_image{
+  transition: transform .35s linear;
+}
+
+.developer_image:hover{
+  transform: scale(1.1) !important;
+  overflow: hidden !important;
 }
