--- a/client/src/css/Categories.css
+++ b/client/src/css/Categories.css
@@ -121,16 +121,16 @@
     #1db853
   );
   margin: 10px;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   background-size: 200% auto;
   color: white;
-  box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
-  display: block;
   color: white !important;
   transition: 0.5s !important;
+  border-radius: 30px !important;
+  display: block !important;
+  max-width: 100% !important;
+  margin: 0 auto !important;
 }
 
 .follow_btn:hover {
@@ -147,17 +147,16 @@
     #1db853
   );
   margin: 10px;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   background-size: 200% auto;
   color: white;
-  box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
-  display: block;
   color: white !important;
-  transition: background-position 0.5s ease-in-out;
   transition: 0.5s !important;
+  border-radius: 30px !important;
+  display: block !important;
+  max-width: 100% !important;
+  margin: 0 auto !important;
 }
 .Unfollow_btn:hover {
   background-position: right center;
